src/test/resources/Res0.err
Error at line: 4: a. Can't read local variable in its own initializer.
