src/test/resources/Res0.lox
print clock();

var a = "outer";
{
  var a = a;
}
